[gd_scene load_steps=6 format=3 uid="uid://bto377kul2r23"]

[ext_resource type="Script" path="res://ver_1/poi/portal/poi_mine_portal.gd" id="1_deitb"]
[ext_resource type="Texture2D" uid="uid://blqfqacdtf1kh" path="res://assets/poi/CryptoMine.png" id="2_1fani"]
[ext_resource type="PackedScene" uid="uid://dxcries0ll04" path="res://ver_1/vfx/beat_sync_vfx.tscn" id="2_s2wrx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vw7st"]
size = Vector2(500, 500)

[sub_resource type="CircleShape2D" id="CircleShape2D_4dyg3"]
radius = 135.059

[node name="MinePortal" type="StaticBody2D"]
script = ExtResource("1_deitb")
unlock_amount = 300.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-229, 49)
polygon = PackedVector2Array(-11, 3, 52, 31, 80, 31, 167, 30, 174, -32, 146, -36, 149, -135, 160, -150, 270, -147, 264, 8, 274, 25, 283, 47, 378, 49, 463, 35, 406, -101, 298, -213, 149, -199, -1, -109)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_1fani")

[node name="BeatSyncEffect" parent="." instance=ExtResource("2_s2wrx")]
scale = Vector2(2, 2)
one_shot = false

[node name="StartTrigger" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartTrigger"]
shape = SubResource("RectangleShape2D_vw7st")

[node name="TeleportTrigger" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportTrigger"]
shape = SubResource("CircleShape2D_4dyg3")
debug_color = Color(0.868496, 0.000530208, 0.854024, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -210.0
offset_top = -223.0
offset_right = 210.0
offset_bottom = -196.0

[connection signal="area_entered" from="StartTrigger" to="." method="_on_start_trigger_area_entered"]
[connection signal="area_exited" from="StartTrigger" to="." method="_on_start_trigger_area_exited"]
[connection signal="area_entered" from="TeleportTrigger" to="." method="_on_teleport_trigger_area_entered"]
